--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.3",
     "postgres": "^3.4.4",
